Fix select style on mobile

--- a/app/assets/stylesheets/media/_mobile.scss
+++ b/app/assets/stylesheets/media/_mobile.scss
@@ -98,9 +98,7 @@
   select {
     font-size: 1em;
     margin: 0.5em auto !important;
-    min-width: 35vw !important;
     max-width: 85vw !important;
-    width: 70vw !important;
   }
 
   input.number {
